# corollary

./: .gitignore
corollary/: Cargo.toml
parser-haskell/: Cargo.toml
parser-haskell/src/: lib.rs  util.rs
